--- a/search.html
+++ b/search.html
@@ -29,7 +29,7 @@ permalink: /search/
     </div>
     <div id="collapseOne" class="collapse" aria-labelledby="workshopTab" data-parent="#accordianResources">
       <div class="card-body">
-        <p>Gain a solid foundation in <a href="#">test</a> academic research and writing with our 30 minute interactive mini-lessons. </p>
+        <p>Gain a solid foundation in academic research and writing with our 30 minute interactive workshops. </p>
           <table class="table table-sm table-bordered table-hover">
             <thead>
             <tr>
