--- a/search.html
+++ b/search.html
@@ -11,9 +11,9 @@ permalink: /search/
 <div class="gcse-searchbox"></div>
 <div class="gcse-searchresults"></div>
 
-<p>Not finding what you are looking for? Take a look at the list of all our resources below, or <a href="{{ '/contact' | relative_url }}" target="_blank">contact the WI+RE team</a> and let us know how we can help!</p>
+<h2 class="mt-5">Browse WI+RE's Resources</h2>
 
-<h2 class="mt-5">WI+RE's Resources</h2>
+<p>Not finding what you are looking for? Take a look at the list of all our resources below, or <a href="{{ '/contact' | relative_url }}" target="_blank">contact the WI+RE team</a> and let us know how we can help!</p>
 
 <!-- -->
 <!-- Workshops tab-->
