--- a/about/index.html
+++ b/about/index.html
@@ -107,6 +107,6 @@ background: '/assets/images/backgrounds/art-creative-flying-17679-3000.jpg'
     </div>
 </div>
 
-<img src="{{ '/assets/images/team/WI+RE-Banner.png' | relative_url }}" alt="The WI+RE team on a video shooting creating a video on reading strategies. Text overlay: WI+RE Writing Instruction and Research Education.  Writing strategies, research tips, time-saving resources." class="img-fluid mx-auto align-middle img-thumbnail" />
+<img src="{{ '/assets/images/team/WI+RE-Banner.png' | relative_url }}" alt="Five student designers on the WI+RE team collaborate on a video shoot. Text overlay: WI+RE." class="img-fluid mx-auto align-middle img-thumbnail" />
 
 
