--- a/about/design-toolkit.html
+++ b/about/design-toolkit.html
@@ -4,6 +4,8 @@ title: WI+RE's Design Tools
 description: "How do we do what we do?"
 background: /assets/images/backgrounds/choice-colors-colours-5933-3000.jpg
 permalink: /about/design-toolkit/
+accessibility-info:
+    - { text: 'WAVE tested - 0 errors', date: '2020-08-27', url: 'https://wave.webaim.org/' }
 ---
 <!-- Design Toolkit -->
     <div class="card mt-5">
