fix - text-justify

--- a/about/creative-team.html
+++ b/about/creative-team.html
@@ -30,7 +30,7 @@ permalink: /about/creative-team/
                 <div class="media-body">
                     <h3 class="mt-0 mb-1"><a href="{{ team-member.url | relative_url | replace: '//', '/' }}">{{ team-member.title }}</a></h3>
                     <span class="text-muted">{{ team-member.position }}</span>
-                    <p class="post-subtitle text-justify">
+                    <p class="post-subtitle ">
                         {% if team-member.bio %}
                         {{ team-member.bio }}
                         {% endif %}
@@ -68,7 +68,7 @@ permalink: /about/creative-team/
                 <div class="media-body">
                     <h3 class="mt-0 mb-1"><a href="{{ team-member.url | relative_url | replace: '//', '/' }}">{{ team-member.title }}</a></h3>
                     <span class="text-muted">{{ team-member.position }}</span>
-                    <p class="post-subtitle text-justify">
+                    <p class="post-subtitle ">
                         {% if team-member.bio %}
                         {{ team-member.bio }}
                         {% endif %}
