--- a/about/creative-team.html
+++ b/about/creative-team.html
@@ -36,7 +36,7 @@ permalink: /about/creative-team/
                         {% endif %}
                     </p>
                     <div class="btn-group btn-group-sm float-right" role="group" aria-label="Actions">
-                        <a href="{{ team-member.url | relative_url | replace: '//', '/' }}" class="btn btn-primary">Learn more</a>
+                        <a href="{{ team-member.url | relative_url | replace: '//', '/' }}" class="btn btn-primary">{{ team-member.title }}'s Portfolio</a>
                     </div>
                 </div>
             </li>
