adding accessibility-info

--- a/about/creative-team.html
+++ b/about/creative-team.html
@@ -4,6 +4,8 @@ title: WI+RE's Creative Team
 description: Get to know the learners, designers, and creators of WI+RE.
 background: /assets/images/backgrounds/art-creative-flying-17679-3000.jpg
 permalink: /about/creative-team/
+accessibility-info:
+    - { text: 'WAVE tested - 0 errors', date: '2020-09-02', url: 'https://wave.webaim.org/' }
 ---
 
 <h2>Who's WI+RE?</h2>
