metadata for comps, frames, LO's

--- a/about/learning-outcomes.html
+++ b/about/learning-outcomes.html
@@ -39,7 +39,8 @@ permalink: /about/learning-outcomes/
       {% include list-by-frame.html %}
     </div>
   <div class="tab-pane fade" id="core-comps" role="tabpanel" aria-labelledby="ucla-core-competencies">
-      <p class="card-text">UCLA Core Competencies - coming soon!</p>
+      <p class="card-text">The <a href="https://escholarship.org/uc/item/2t03q5bw" target="_blank">Core Competencies for Research and Information Literacy at UCLA</a> outline a set of key stages in the research and writing process. The following activities were designed to help learners and researchers succeed with each of these key stages.</p>
+      {% include list-by-comps.html %}
       </div>
       </div>  
   </div>
