--- a/search.html
+++ b/search.html
@@ -14,6 +14,7 @@ permalink: /search/
 <h2 class="mt-5">Browse WI+RE's Resources</h2>
 
 <p>Not finding what you are looking for? Take a look at the list of all our resources below, or <a href="{{ '/contact' | relative_url }}" target="_blank">contact the WI+RE team</a> and let us know how we can help!</p>
+<p><strong>Tip:</strong> You can also browse WI+RE's resources by <a class="" href="{{ '/about/learning-outcomes/' | relative_url }}">Learning Outcomes &amp; the ACRL Frames</a> or see an overview of our efforts to make our resources accessible on the <a class="" href="{{ '/about/accessibility/' | relative_url }}">WI+RE Accessibility Report</a>.</p>
 
 <!-- -->
 <!-- Workshops tab-->
