--- a/search.html
+++ b/search.html
@@ -1,140 +1,159 @@
 ---
-layout: page
+layout: page-search
 title: Search WI+RE
 description: Search our collection of for tutorials, workshops, handouts, and more!
 permalink: /search/
+search-tables: yes
+accessibility-info:
+    - { text: 'WAVE tested - 0 errors', date: '2020-09-17', url: 'https://wave.webaim.org/' }
 ---
-
-<h2>Search WI+RE</h2>
-<p><small><em>Search the WI+RE website for our quick and practical research and writing tutorials, workshops, and handouts.</em></small></p>
-<script async src="https://cse.google.com/cse.js?cx=015811538852292369723:vhcz9pwp40c"></script>
-<div class="gcse-searchbox"></div>
-<div class="gcse-searchresults"></div>
-
-<h2 class="mt-5">Browse WI+RE's Resources</h2>
-
-<p>Not finding what you are looking for? Take a look at the list of all our resources below, or <a href="{{ '/contact' | relative_url }}" target="_blank">contact the WI+RE team</a> and let us know how we can help!</p>
-<p><strong>Tip:</strong> You can also browse WI+RE's resources by <a class="" href="{{ '/about/learning-outcomes/' | relative_url }}">Learning Outcomes &amp; the ACRL Frames</a> or see an overview of our efforts to make our resources accessible on the <a class="" href="{{ '/about/accessibility/' | relative_url }}">WI+RE Accessibility Report</a>.</p>
-
-<!-- -->
-<!-- Workshops tab-->
-<!-- -->
-<div class="accordion" id="accordianResources">
-  <div class="card">
-    <div class="card-header" id="workshopTab">
-      <h2 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-          Workshops
-        </button>
-      </h2>
-    </div>
-    <div id="collapseOne" class="collapse" aria-labelledby="workshopTab" data-parent="#accordianResources">
-      <div class="card-body">
-        <p>Gain a solid foundation in academic research and writing with our 30 minute interactive workshops. </p>
-          <table class="table table-sm table-bordered table-hover">
-            <thead>
-            <tr>
-                <th scope="col">Title</th>
-                <th scope="col">Description</th>
-            </tr>
-        </thead>
-        <tbody>
-          {% for workshop in site.workshops %}
-                <tr>
-                    <td>
-                        <a href="{{ workshop.url | relative_url }}" >{{ workshop.title }}</a>
-                        {% if workshop.awards %}
-                            {% for award in workshop.awards %}
-                                {% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>
-                            {% endfor %}
-                        {% endif %}
-                    </td>
-                    <td>{{ workshop.description }}</td>
-                </tr>
-            {% endfor %}
-              </tbody>
-          </table>
-      </div>
-    </div>
-  </div>
-<!-- -->
-<!-- Tutorials tab-->
-<!-- -->
-  <div class="card">
-    <div class="card-header" id="tutorialTab">
-      <h2 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Tutorials
-        </button>
-      </h2>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="tutorialTab" data-parent="#accordianResources">
-      <div class="card-body">
-                <p>Get right to it with our collection of 5 minute research and writing tutorials.</p>
-          <table class="table table-sm table-bordered table-hover">
-            <thead>
-            <tr>
-                <th scope="col">Title</th>
-                <th scope="col">Description</th>
-            </tr>
-        </thead>
-        <tbody>
-          {% for tutorial in site.tutorials %}
-                <tr>
-                    <td>
-                        <a href="{{ tutorial.url | relative_url }}">{{ tutorial.title }}</a>
-                        {% if tutorial.awards %}
-                            {% for award in tutorial.awards %}
-                                {% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>
-                            {% endfor %}
-                        {% endif %}
-                    </td>
-                    <td>{{ tutorial.description }}</td>
-                </tr>
-            {% endfor %}
-              </tbody>
-          </table>
-      </div>
-    </div>
-  </div>
-<!-- -->
-<!-- Handouts tab-->
-<!-- -->
-  <div class="card">
-    <div class="card-header" id="handoutTab">
-      <h2 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Handouts
-        </button>
-      </h2>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="handoutTab" data-parent="#accordianResources">
-      <div class="card-body">
-            <p>Printable PDFs of our most popular resources.</p>
-          <table class="table table-sm table-striped table-bordered">
-            <thead>
-            <tr>
-                <th scope="col">Title</th>
-                <th scope="col">Description</th>
-            </tr>
-        </thead>
-        <tbody>
-          {% for handout in site.handouts %}
-                <tr>
-                    <td>
-                        <a href="{{ handout.url | relative_url }}">{{ handout.title }}</a>
-                        {% if handout.awards %}
-                            {% for award in handout.awards %}
-                                {% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>
-                            {% endfor %}
-                        {% endif %}
-                    </td>
-                    <td>{{ handout.description }}</td>
-                </tr>
-            {% endfor %}
-              </tbody>
-          </table>
-      </div>
-    </div>
-  </div>
+{% assign sorted_documents = site.documents | sort: "title" %}
+<!-- search input form -->
+  <div class="row">
+                    <div class="col-lg-12 col-md-12 mx-auto">
+                        <div class="input-group md-form form-sm form-1 pl-0 mb-3">
+                          <div class="input-group-prepend">
+                            <span class="input-group-text" style="background-color: #005587;" id="basic-text1"><i class="fas fa-search text-white" aria-hidden="true"></i></span>
+                            <label for="myInput" class="sr-only">Search for tutorials, workshops, handouts, and more:</label>
+                          </div>
+                          <input class="form-control input-lg" id="myInput" type="text" aria-label="Search for tutorials and workshops" placeholder="try keywords like literature review or writing">
+                        </div>
+                    </div>
 </div>
+<!-- list of content in a search table -->
+<!-- -->
+<!-- -->
+<h2>WI+RE Tutorials, Workshops, and Handouts</h2>
+ <table class="table table-sm table-responsive-sm">
+        <thead>
+            <th scope="col" style="display: none;">Thumbnail</th>
+            <th scope="col" style="display: none;">Title</th>
+            <th scope="col" style="display: none;">Learning Outcomes</th>
+            <th scope="col" style="display: none;">Tags</th> <!-- use tags for common search terms, e.g., "lit review" - column is hidden but matching results will still display -->
+        </thead>
+        <tbody id="myTable">
+{% for item in sorted_documents %}
+    {% if item.layout != "embed" and item.layout != "embed-simple" and item.layout != "post" and item.layout != "team-member" %}
+            {% if item.title %}
+                <tr>
+                        <td>
+                            {% if item.thumbnail %}
+                                        <img src="{{ item.thumbnail | relative_url }}" class="img-fluid  d-none d-md-block" style="width: 100px;" alt=""> <!-- decorative img alt intentionally left blank -->
+                                    {% else %}
+                                        <img src="{{ '/assets/images/icons/tutorial-tn.png' | relative_url }}" class="img-fluid" style="width: 100px;" alt=""><!-- decorative img alt intentionally left blank -->
+                                    {% endif %}
+                        </td>
+                        <td>
+                            <p><strong><a href="{{ item.url | relative_url }}">{{ item.title }}</a> {% if item.awards %}{% for award in item.awards %}{% include award-namify.html %} <i aria-hidden="true" class="fas fa-award" data-toggle="tooltip" data-placement="right" title="{{ awardName }}"></i><span class="sr-only">{{ awardName }}</span>{% endfor %}{% endif %}<small><em> ({{ item.layout | capitalize }})</em></small></strong></p>
+                        </td>
+                        <td style="display: none;">
+                                {% if item.learning-outcomes %}
+                                    <ul>
+                                        {% for outcome in item.learning-outcomes %}
+                                            <li>{{ outcome }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                    {% else %}
+                                        <small><em>Coming soon!</em></small>
+                                {% endif %}
+                        </td>
+                        <td style="display: none;">
+                            {% if item.tags %}
+                                <p>{{ item.tags | split: ", " }}</p>
+                            {% endif %}
+                        </td>
+                </tr>
+            {% endif %}
+    {% endif %}
+{% endfor %}
+</tbody>
+</table>
+<!-- list of team members -->
+<!-- -->
+<!-- -->
+
+<h2>WI+RE Team</h2>
+<table class="table table-sm table-responsive-sm">
+        <thead>
+            <th scope="col" style="display: none;">Profile Picture</th>
+            <th scope="col" style="display: none;">Title</th>
+            <th scope="col" style="display: none;">Description</th>
+            <th scope="col" style="display: none;">Tags</th> <!-- use tags for common search terms, e.g., "lit review" - column is hidden but matching results will still display -->
+            <th scope="col" style="display: none;">Authored Materials</th>
+        </thead>
+        <tbody id="myTable">
+{% for item in sorted_documents %}
+    {% if item.layout == "team-member" %}
+            {% if item.title %}
+                <tr>
+                        <td>
+                                {% if item.profile %}<img src="{{ item.profile | relative_url }}" class="img-fluid  d-none d-md-block" style="width: 100px;" alt=""> <!-- decorative img alt intentionally left blank -->
+                                    {% else %}
+                                        <img src="{{ '/assets/images/team/np_cat_114598_B8B8B8.png' | relative_url }}" class="img-fluid" style="width: 100px;" alt=""><!-- decorative img alt intentionally left blank -->
+                                    {% endif %}
+                        </td>
+                        <td>
+                            <p><strong><a href="{{ item.url | relative_url }}">{{ item.title }}</a></strong></p>
+                        </td>
+                        <td style="display: none;">
+                                {% if item.description %}
+                                    {{ item.description }}
+                                    {% else %}
+                                        <small><em>Coming soon!</em></small>
+                                {% endif %}
+                        </td>
+                        <td style="display: none;">
+                            {% if item.tags %}
+                                <p>{{ item.tags | split: ", " }}</p>
+                            {% endif %}
+                        </td>
+                        <td style="display: none;">
+                            {% for resource in sorted_documents %} 
+                                {% if resource.authors contains item.username or resource.contributors contains item.username %}
+                                    {{ resource.title }} - 
+                                {% endif %}
+                            {% endfor %}
+                        </td>
+                </tr>
+            {% endif %}
+    {% endif %}
+{% endfor %}
+</tbody>
+</table>
+<!-- list of sandbox posts -->
+<!-- -->
+<!-- -->
+<h2>WI+RE Sandbox Posts</h2>
+<p><em>For a behind the scenes look at WI+RE's learner-led design process</em></p>
+<table class="table table-sm table-responsive-sm">
+        <thead>
+            <th scope="col" style="display: none;">Title</th>
+            <th scope="col" style="display: none;">Description</th>
+            <th scope="col" style="display: none;">Tags</th> <!-- use tags for common search terms, e.g., "lit review" - column is hidden but matching results will still display -->
+        </thead>
+        <tbody id="myTable">
+{% for item in sorted_documents %}
+    {% if item.layout == "post" %}
+            {% if item.title %}
+                <tr>
+                        <td>
+                            <p><strong><a href="{{ item.url | relative_url }}">{{ item.title }}</a> </strong></p>
+                        </td>
+                        <td style="display: none;">
+                                {% if item.description %}
+                                    {{ item.description }}
+                                    {% else %}
+                                        <small><em>Coming soon!</em></small>
+                                {% endif %}
+                        </td>
+                        <td style="display: none;">
+                            {% if item.tags %}
+                                <p>{{ item.tags | split: ", " }}</p>
+                            {% endif %}
+                        </td>
+                </tr>
+            {% endif %}
+    {% endif %}
+{% endfor %}
+</tbody>
+</table>
