small search fixes
intro paragraph for search page, updating icon bg on lo's page

--- a/search.html
+++ b/search.html
@@ -7,4 +7,6 @@ search-tables: yes
 accessibility-info:
     - { text: 'WAVE tested - 0 errors', date: '2020-09-17', url: 'https://wave.webaim.org/' }
 ---
+<p>Search below for WI+RE tutorials, workshops, handouts, and more! Or check out WI+RE's resources listed by <a class="" href="{{ '/about/learning-outcomes/' | relative_url }}" role="button">Learning Outcomes and the ACRL Framework</a>.</p>
+
 {% include search-all.html %}
