adding creates - getting ready to add stem and maybe themes

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ description: "Design for learning, led by learners."
 permalink: /about/
 background: '/assets/images/backgrounds/art-creative-flying-17679-3000.jpg'
 accessibility-info:
-    - - { text: 'WAVE tested - 0 errors', date: '2020-08-27', url: 'https://wave.webaim.org/' }
+    - { text: 'WAVE tested - 0 errors', date: '2020-08-27', url: 'https://wave.webaim.org/' }
 ---
 <h2>Hi there!</h2>
 <div class="row">
