fixing urls in og:image - adding some logic, adding some imgs

--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@ layout: home
 title: WI+RE (Writing Instruction + Research Education)
 description: WI+RE (Writing Instruction + Research Education)
 background: '/assets/images/backgrounds/jans-steps-background.jpg'
+thumbnail: '/assets/images/brand/WIRE-homepage-1200x630.jpg'
 ---
