--- a/categories.html
+++ b/categories.html
@@ -34,17 +34,21 @@ background:
 <div class="container">
   <div class="row">
     <div class="col-lg-12 col-md-12 col-xl-12 mx-auto">
-      <h2>WI+RE Categories</h2>
-        {% assign prepgroups = site.documents | where_exp:"item","item.layout != 'team-member'" %}
+      <h2>WI+RE Categories!!!!</h2>
+        {% assign prepgroups1 = site.documents | where_exp:"item","item.layout != 'team-member'" %}
+        {% assign prepgroups2 = prepgroups1 | where_exp:"item","item.layout != 'handout'" %}
+        {% assign prepgroups3 = prepgroups2 | where_exp:"item","item.layout != 'post'"%}
         {% assign groups = prepgroups | group_by: "category" | sort: "sort-weight" %}
         
         {% for group in groups %}
+        {% if group.name %}
         {% assign anchorname = group.name | slugify %}
             <a href="#{{ anchorname }}">
                 <button type="button" class="btn btn-primary mb-1">
                     {{ group.name }}
                 </button>
             </a> 
+        {% endif %}
         {% endfor %}
 
         {% for group in groups %}
