update workshops page layout

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -1,62 +1,121 @@
 ---
-layout: page
+layout: default
 title: Workshops
 description: Interactive workshops to guide you through the research and writing process.
 permalink: /workshops/
 background: 
 ---
 
-{% assign groups = site.workshops | group_by: "category" | sort: "date" %}
-
-{% for group in groups %}
-    {% assign anchorname = group.name | slugify %}
-    <a href="#{{ anchorname }}">
-        <button type="button" class="btn btn-primary">
-            {{ group.name }}
-        </button>
-    </a> 
-{% endfor %}
-          
-
-{% for group in groups %}
-    <div class="card mt-5">
-        <div class="card-header pt-4">
-            {% assign anchorname = group.name | slugify %}
-            <h2 id="{{ anchorname }}">{{ group.name }}</h2>
+<!-- Page Header -->
+{% if page.background %}
+<header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+{% else %}
+<header class="masthead">
+{% endif %}
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-md-11 col-xl-12 mx-auto">
+        <div class="page-heading">
+            <div class="masthead-text-box heading-text-box">
+          <h1>{{ page.title }}</h1>
+          {% if page.description %}
+            <span class="subheading">{{ page.description }}</span>
+          {% endif %}
+            </div>
         </div>
-        <div class="card-body">
-            <ul class="list-unstyled">
-            {% for workshop in group.items %}
-                <li class="media mt-2">
-                        <a href="{{ workshop.url | relative_url | replace: '//', '/' }}" class="mr-4 d-none d-md-block" style="max-width: 30%;">
-                            {% if workshop.thumbnail %}
-                                <img src="{{ workshop.thumbnail | relative_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Workshop icon">
-                            {% else %}
-                                <img src="{{ '/assets/images/icons/tutorial-tn.png' | relative_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="Generic workshop icon">
-                            {% endif %}
-                        </a>
-                    <div class="media-body">
-                            <h3 class="mt-0 mb-1"><a href="{{ workshop.url | relative_url | replace: '//', '/' }}">{{ workshop.title }}</a></h3>
+      </div>
+    </div>
+  </div>
+</header>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-xl-12 mx-auto">
+
+        {% assign groups = site.workshops | group_by: "category" | sort: "sort-weight" %}
+        
+        {% for group in groups %}
+        {% assign anchorname = group.name | slugify %}
+            <a href="#{{ anchorname }}">
+                <button type="button" class="btn btn-primary mb-1">
+                    {{ group.name }}
+                </button>
+            </a> 
+        {% endfor %}
+
+        {% for group in groups %}
+            <div class="card mt-5">
+                <div class="card-header pt-4">
+                    <h2 id="{{ group.name | slugify }}">{{ group.name }}</h2>
+                </div>
+                <div class="card-body">
+                    {% assign sorted-items = group.items %}
+                    {% for tutorial in sorted-items %}
+                    {% assign mod = forloop.index | modulo: 2 %}
+        <!--            if in left column-->
+                    {% if mod == 1 %}
+                    <div class="row {% if forloop.rindex > 2 %} border-lg-bottom {% endif %}"> 
+                    {% endif %}
+                        <div class="col-lg border-sm-bottom {% if mod == 1 %} border-lg-right {% endif %}">
+                            <div class="row">
+                                <div class="col-md-3 align-self-center mt-3">
+                                    <a href="{{ tutorial.url | relative_url | replace: '//', '/' }}" class="d-none d-md-block" style="max-width: 100%;">
+                                    {% if tutorial.thumbnail %}
+                                        <img src="{{ tutorial.thumbnail | relative_url }}" class=" img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Tutorial icon">
+                                    {% else %}
+                                        <img src="{{ '/assets/images/icons/tutorial-tn.png' | relative_url }}" class="img-fluid" style="max-width: 100%;" alt="Tutorial icon">
+                                    {% endif %}
+                                </a>
+                                </div>
+                                <div class="col-md-9 align-self-center mt-3">
+                                    <h3 class="mt-0"><a href="{{ tutorial.url | relative_url | replace: '//', '/' }}">{{ tutorial.title }}</a></h3>
+                                </div>
+                            </div>
                             <p class="post-subtitle text-justify">
-                                {% if workshop.description %}
-                                    {{ workshop.description }}
+                                        {% if tutorial.description %}
+                                            {{ tutorial.description }}
+                                        {% else %}
+                                            {{ tutorial.excerpt | strip_html | truncatewords: 30 }}
+                                        {% endif %}
+                                    </p>
+                                <!--learning outcome tool tip-->
+<!--
+                                {% if tutorial.learning-outcomes %}
+                                {% assign outcomeoutput = "" %}
+                                {% for outcome in tutorial.learning-outcomes %}
+                                    {% assign outcomeoutput = outcomeoutput | append: "&#8226;" | append: outcome | append: "&#13;" %}
+                                {% endfor %}
+                                <div class="btn-group btn-group-sm float-left mb-3" role="group" aria-label="Learning Outcomes">
+                                    <a href="" data-html="true" class="btn btn-secondary" data-toggle="tooltip" text-align="left" data-placement="top" title="{{ outcomeoutput }}">Learning Outcomes</a>
+                                </div>
                                 {% endif %}
-                            </p>
-                        <div class="btn-group btn-group-sm float-right" role="group" aria-label="Actions">
-                            <a href="{{ workshop.url | relative_url | replace: '//', '/' }}" class="btn btn-primary">Start the Workshop</a>
-                            {% if workshop.handout %}
-                                <a href="{{ workshop.handout | relative_url | replace: '//', '/' }}" class="btn btn-primary">Download the Handout</a>
-                            {% endif %}
+-->
+                                <div class="btn-group btn-group-sm float-right mb-3" role="group" aria-label="Actions">
+                                    <a href="{{ tutorial.url | relative_url | replace: '//', '/' }}" class="btn btn-primary">Tutorial</a>
+                                    {% if tutorial.handout %}
+                                        <a href="{{ tutorial.handout | relative_url }}" class="btn btn-primary">Handout</a>
+                                    {% endif %}
+                                </div>
+                        </div>
+        <!--            if in right column-->
+                    {% if mod == 0 %}
+                        </div>
+                    {% endif %}
+        <!--            if in left column and last post in category-->
+                    {% if mod == 1 and forloop.last == true %}
+                        <div class="col-lg">
                         </div>
                     </div>
-                </li>
-                <hr>
-            {%endfor%}
-            </ul>
+                    {% endif %}
+                {%endfor%}
+                </div>
         </div>
+        {%endfor%}
+
+        {% include pager.html %}
+
     </div>
-{%endfor%}
+  </div>
+</div>
 
-<hr>
-
-{% include pager.html %}
