--- a/about/index.html
+++ b/about/index.html
@@ -68,6 +68,15 @@ accessibility-info:
 <h5 class="mt-3">2020</h5>
 <div class="row justify-content-start">
     <div class="col-md-10 col-sm-12">
+        {% for pub in site.data.publications.twentytwentyone %}
+            {% include pubcard.html %}
+    {% endfor %}
+    </div>
+</div>
+
+<h5 class="mt-3">2020</h5>
+<div class="row justify-content-start">
+    <div class="col-md-10 col-sm-12">
         {% for pub in site.data.publications.twentytwenty %}
             {% include pubcard.html %}
     {% endfor %}
