--- a/_embeds/zotero.html
+++ b/_embeds/zotero.html
@@ -49,7 +49,7 @@ theme:  sky
 			</section>
 			<section>
 				 <h3>Quick Video Tour of Zotero's Key Features</h3>
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/KK9J3ibHyRI" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="640" height="315" src="https://www.youtube.com/embed/GAy_bX9FjJU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<p><small><em><i class="fa fa-youtube" title="YouTube"></i>: <a href="https://www.youtube.com/watch?v=H8UTehdF92s" target="_blank">Zotero Videos</a></em></small></p>
 				<hr />
 				<p><a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm ready to download Zotero!<p>
