--- a/_embeds/zotero.html
+++ b/_embeds/zotero.html
@@ -123,7 +123,7 @@ theme:  sky
 					 		<section>
 								<h3>Saving Books</h3>
 								
-								<iframe width="711" height="400" src="https://www.youtube.com/embed/0jCio5biXyg?rel=0" frameborder="0" allowfullscreen></iframe>
+								<iframe width="711" height="400" src="https://www.youtube.com/embed/p8dz0cKixrQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									
 						<hr />
 						<p>How to cite: <a href="#/4/1">Books </a> | <a href="#/4/2">Articles</a> | <a href="#/4/3">Websites and more</a></p>
@@ -131,7 +131,7 @@ theme:  sky
 					 </section>
 	<section>
 								<h3>Saving Articles</h3>
-								<iframe width="711" height="400" src="https://www.youtube.com/embed/Cg25gHIQpyk?rel=0" frameborder="0" allowfullscreen></iframe>
+								<iframe width="711" height="400" src="https://www.youtube.com/embed/zGmf49-iSbo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 		
 								<hr />
